rabbitmq-manifest-dev/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: dev
spec:
  selector:
    matchLabels:
      app: "rabbitmq"
  # headless service that gives network identity to the RMQ nodes, and enables them to cluster
  serviceName: rabbitmq-headless # serviceName is the name of the service that governs this StatefulSet. This service must exist before the StatefulSet, and is responsible for the network identity of the set. Pods get DNS/hostnames that follow the pattern: pod-specific-string.serviceName.default.svc.cluster.local where "pod-specific-string" is managed by the StatefulSet controller.
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq-data
      namespace: dev
    spec:
      storageClassName: ebs-sc
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: "5Gi"
  template:
    metadata:
      name: rabbitmq
      namespace: dev
      labels:
        app: rabbitmq
    spec:
      volumes:
      - name: rabbitmq-config
        configMap:
          name: rabbitmq-config
          optional: false
          items:
          - key: enabled_plugins
            path: "enabled_plugins"
          - key: rabbitmq.conf
            path: "rabbitmq.conf"
      # read-write volume into which to copy the rabbitmq.conf and enabled_plugins files
      # this is needed since the docker image writes to the rabbitmq.conf file
      # and Kubernetes Config Maps are mounted as read-only since Kubernetes 1.9.4
      - name: rabbitmq-config-rw
        emptyDir: {}
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-data
      serviceAccount: rabbitmq
      # The Docker image runs as the `rabbitmq` user with uid 999 
      # and writes to the `rabbitmq.conf` file
      # The security context is needed since the image needs
      # permission to write to this file. Without the security 
      # context, `rabbitmq.conf` is owned by root and inaccessible
      # by the `rabbitmq` user
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
      containers:
      - name: rabbitmq
        # Community Docker Image
        image: rabbitmq:latest
        volumeMounts:
        # mounting rabbitmq.conf and enabled_plugins
        # this should have writeable access, this might be a problem
        - name: rabbitmq-config-rw
          mountPath: "/etc/rabbitmq"
          # mountPath: "/etc/rabbitmq/conf.d/"
        # rabbitmq data directory
        - name: rabbitmq-data
          mountPath: "/var/lib/rabbitmq/mnesia"
        ports:
        - name: amqp
          containerPort: 5672
          protocol: TCP
        - name: management
          containerPort: 15672
          protocol: TCP
        - name: prometheus
          containerPort: 15692
          protocol: TCP
        - name: epmd
          containerPort: 4369
          protocol: TCP
        livenessProbe:
          exec:
            # This is just an example. There is no "one true health check" but rather
            # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
            # and intrusive health checks.
            # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
            #
            # Stage 2 check:
            command: ["rabbitmq-diagnostics", "status"]
          initialDelaySeconds: 60
          # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
          periodSeconds: 60
          timeoutSeconds: 15
        readinessProbe: # probe to know when RMQ is ready to accept traffic
          exec:
            # This is just an example. There is no "one true health check" but rather
            # several rabbitmq-diagnostics commands that can be combined to form increasingly comprehensive
            # and intrusive health checks.
            # Learn more at https://www.rabbitmq.com/monitoring.html#health-checks.
            #
            # Stage 1 check:
            command: ["rabbitmq-diagnostics", "ping"]
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 10
      

---


# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: rabbitmq
#   labels:
#     app: rabbitmq
# spec:
#   serviceName: "rabbitmq-headless"
#   replicas: 2  # Number of RabbitMQ replicas/pods
#   selector:
#     matchLabels:
#       app: rabbitmq
#   template:
#     metadata:
#       labels:
#         app: rabbitmq
#     spec:
#       containers:
#         - name: rabbitmq
#           image: rabbitmq:latest
#           ports:
#             - containerPort: 5672
#             - containerPort: 15672
          # env:
          #   - name: RABBITMQ_DEFAULT_USER
          #     value: "guest"
          #   - name: RABBITMQ_DEFAULT_PASS
          #     value: "guest"
#           volumeMounts:
#             - name: rabbitmq-data
#               mountPath: /var/lib/rabbitmq
#             - name: config-volume
#               mountPath: /etc/rabbitmq/rabbitmq.conf  # Mount the specific file
#               subPath: rabbitmq.conf
#           resources:
#             requests:
#               memory: "1Gi"
#               cpu: "500m"
#             limits:
#               memory: "2Gi"
#               cpu: "1000m"
#       volumes:
#         - name: config-volume
#           configMap:
#             name: rabbitmq-config
#   volumeClaimTemplates:
#     - metadata:
#         name: rabbitmq-data
#       spec:
#         accessModes: [ "ReadWriteOnce" ]
#         storageClassName: ebs-sc
#         resources:
#           requests:
#             storage: 5Gi  # Size of the Persistent Volume
