rabbitmq-manifest-dev/rabbitmq-headless.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: rabbitmq-headless
# spec:
#   clusterIP: None  # Headless service
#   selector:
#     app: rabbitmq
#   ports:
#     - name: amqp
#       port: 5672
#     - name: management
#       port: 15672


apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
  namespace: dev
spec:
  clusterIP: None
  ports:
  - name: epmd
    port: 4369
    protocol: TCP
    targetPort: 4369
  - name: cluster-rpc
    port: 25672
    protocol: TCP
    targetPort: 25672
  selector:
    app: rabbitmq
  type: ClusterIP
  sessionAffinity: None
