rabbitmq-manifest-dev/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: rabbitmq-service
#   labels:
#     app: rabbitmq
# spec:
#   type: ClusterIP  # Internal cluster communication only
#   ports:
#     - name: management
#       port: 15672
#       targetPort: 15672
#       protocol: TCP
#     - name: amqp
#       port: 5672
#       targetPort: 5672
#       protocol: TCP
#   selector:
#     app: rabbitmq




kind: Service
apiVersion: v1
metadata:
  namespace: dev
  name: rabbitmq-service
  labels:
    app: rabbitmq
    type: ClusterIP
spec:
  type: ClusterIP
  ports:
   - name: http
     protocol: TCP
     port: 15672
   - name: prometheus
     protocol: TCP
     port: 15692
   - name: amqp
     protocol: TCP
     port: 5672
  selector:
    app: rabbitmq
